--- a/html/paginaRedireccions.html
+++ b/html/paginaRedireccions.html
@@ -11,7 +11,7 @@
 </head>
 
 <body class="bg-gray-100 min-h-screen flex flex-col justify-between">
-    <div class="bg-blue-800 text-center py-4 relative">
+    <div class="bg-[#1A3D40] text-center py-4 relative">
         <!-- Main Title (side-to-side, top of the page) -->
         <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold text-lime-200">EcoVerse</h1>
         <!-- Logout Icon -->
