--- a/html/infoApp.html
+++ b/html/infoApp.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
-<body class="bg-primary min-h-screen">
-    <div class="bg-tertiary text-center py-4 relative">
+<body class="bg-gray-100 min-h-screen">
+    <div class="bg-[#1A3D40] text-center py-4 relative">
         <a href="paginaRedireccions.html" class="absolute top-4 left-4 text-lime-200 text-2xl">
             <i class="fas fa-arrow-left"></i>
         </a>
@@ -24,12 +24,20 @@
 
     <div class="p-6 space-y-4">
         <!-- Mamífers -->
-        <div class="bg-secondary2 p-4 rounded-lg text-left">
+        <div class="bg-blue-200 p-4 rounded-lg text-left">
             <h1 class="text-3xl font-semibold">Que Es</h1>
         </div>
 
-        <div class="bg-secondary2 p-4 rounded-lg text-left">
-            <h1 class="text-3xl font-semibold">O</h1>
+        <div class="ml-20 mr-10 bg-blue-200 p-4 rounded-lg text-left">
+            <p class="text-lg">InfoApp és una plataforma educativa que proporciona informació sobre la biodiversitat del planeta, centrant-se en la vida animal, vegetal i els hàbits ecosostenibles. Dissenyada per ser accessible i atractiva, la nostra web és un recurs integral tant per als més petits com per a adults interessats a aprendre sobre la natura i com protegir el medi ambient. A través de seccions interactives i un enfocament lúdic, busquem fomentar el coneixement i el respecte pel món natural.</p>
+        </div>
+
+        <div class="bg-blue-200 p-4 rounded-lg text-left">
+            <h1 class="text-3xl font-semibold">Objectius</h1>
+        </div>
+
+        <div class="ml-20 mr-10 bg-blue-200 p-4 rounded-lg text-left">
+            <h1 class="text-lg">El nostre objectiu principal és educar les noves generacions sobre la importància de cuidar el medi ambient i preservar la biodiversitat. A través de la nostra secció de trivia, incentivem als nens i joves a aprendre de manera divertida, mentre que el fòrum fomenta la participació activa d'usuaris que comparteixen idees sobre com viure de manera més sostenible. InfoApp també pretén ser una plataforma que inspiri la creació de comunitats dedicades a l'acció climàtica i a la conservació de la natura.</h1>
         </div>
     </div>
 </body>
