--- a/html/seleccioEspecimens/invertebrats.html
+++ b/html/seleccioEspecimens/invertebrats.html
@@ -9,14 +9,14 @@
 <body class="bg-gray-100">
     <!-- Títul principal -->
     <div class="bg-green-600 text-white text-center py-4">
-        <h1 class="text-2xl font-bold">Invertevrats</h1>
+        <h1 class="text-2xl font-bold">Invertebrats</h1>
     </div>
 
     <!-- Contenidor de les tagetes -->
     <div class="p-4 space-y-6">
         <!-- Targeta 1 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" alt="Cranc Gegant" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="../../img/cangrejo_G.png" alt="Cranc Gegant" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Cranc Gegant</h2>
                 <button class="bg-blue-200 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
