--- a/src/pages/paginaRedireccions.html
+++ b/src/pages/paginaRedireccions.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EcoVerse</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/src/css/main.css" />
     <!-- Add Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 
 <body class="bg-gray-100 min-h-screen flex flex-col justify-between">
-    <div class="bg-[#1A3D40] text-center py-4 relative">
+    <div class="bg-tertiary text-center py-4 relative">
         <!-- Main Title (side-to-side, top of the page) -->
-        <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold text-lime-200">EcoVerse</h1>
+        <h1 class="text-4xl sm:text-5xl md:text-6xl lg:text-7xl font-bold text-secondary1">EcoVerse</h1>
         <!-- Logout Icon -->
-        <a href="index.html" class="absolute top-4 right-4 text-lime-200 text-2xl">
+        <a href="/public/index.html" class="absolute top-4 right-4 text-secondary1 text-2xl">
             <i class="fas fa-sign-out-alt"></i>
         </a>
     </div>
@@ -23,10 +23,10 @@
     <!-- Main Content -->
     <div class="flex-1 flex flex-col justify-center space-y-4 sm:space-y-6 px-4 mt-8">
         <!-- Buttons -->
-        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-blue-200 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl"><a href="./infoApp.html">InfoApp</a></button>
-        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-blue-200 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl">Consells Ecosostenibles</button>
-        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-lime-200 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl">Fauna i Flora</button>
-        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-lime-200 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl"><a href="./animals.html">Animals</a></button>
+        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary2 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl"><a href="./infoApp.html">InfoApp</a></button>
+        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary2 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl">Consells Ecosostenibles</button>
+        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary1 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl">Fauna i Flora</button>
+        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary1 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl"><a href="./animals.html">Animals</a></button>
     </div>
 
     <!-- Trivia Button (with some space from the base of the page) -->
