--- a/src/pages/seleccioEspecimens/invertebrats.html
+++ b/src/pages/seleccioEspecimens/invertebrats.html
@@ -4,11 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invertebrats</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/src/css/main.css" />
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
 </head>
 <body class="bg-gray-100">
-    <!-- Títul principal -->
-    <div class="bg-green-600 text-white text-center py-4">
+    <!-- Main title -->
+    <div class="bg-tertiary text-white text-center py-4">
+        <a href="../animals.html"
+            class="absolute top-4 left-4 text-lime-200 text-2xl">
+            <i class="fas fa-arrow-left"></i>
+        </a>
         <h1 class="text-2xl font-bold">Invertebrats</h1>
     </div>
 
@@ -19,9 +26,11 @@
             <img src="../../img/cangrejo_G.png" alt="Cranc Gegant" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Cranc Gegant</h2>
-                <button class="bg-blue-200 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
-                    Click
-                </button>
+                <a href="../infoEspecimen/crancGegant.html">
+                    <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
+                        Click
+                    </button>
+                </a>
             </div>
         </div>
 
@@ -30,9 +39,11 @@
             <img src="https://via.placeholder.com/100" alt="Medusa cabellera de lleó" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Medusa cabellera de lleó</h2>
-                <button class="bg-blue-200 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
-                    Click
-                </button>
+                <a href="../infoEspecimen/medusaCabeleraDeLleo.html">
+                    <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
+                        Click
+                    </button>
+                </a>
             </div>
         </div>
 
@@ -41,9 +52,11 @@
             <img src="https://via.placeholder.com/100" alt="Anemones de mar" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Anemones de mar</h2>
-                <button class="bg-blue-200 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
-                    Click
-                </button>
+                <a href="../infoEspecimen/anemonaDeMar.html">
+                    <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
+                        Click
+                    </button>
+                </a>
             </div>
         </div>
     </div>
