--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,8 @@
     <title>Log In</title>
   </head>
 
-  <body class="bg-gray-100 flex items-center justify-center h-screen">
-    <div class="bg-white p-8 rounded-lg shadow-lg w-full max-w-md">
+  <body class="bg-primary flex items-center justify-center h-screen">
+    <div class="bg-blanc p-8 rounded-lg shadow-lg w-full max-w-md">
       <!-- Centered Image -->
       <div class="flex justify-center mb-6">
         <img src="/src/assets/user_icon.png" alt="User Icon" class="w-44" />
@@ -26,7 +26,7 @@
             type="email"
             placeholder="Email"
             required
-            class="w-full bg-blue-100 p-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+            class="w-full bg-blanc p-3 rounded-lg focus:outline-none focus:ring-2 shadow-lg"
           />
         </div>
 
@@ -40,7 +40,7 @@
             type="password"
             placeholder="Password"
             required
-            class="w-full bg-blue-100 p-3 rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500"
+            class="w-full bg-blanc p-3 rounded-lg focus:outline-none focus:ring-2 shadow-lg focus:ring-tertiary"
           />
         </div>
 
@@ -54,13 +54,13 @@
         <div class="flex justify-between space-x-4">
           <a
             href="/src/pages/register.html"
-            class="h-9 w-full bg-blue-500 text-white font-semibold rounded-md hover:bg-blue-600 flex items-center justify-center"
+            class="h-9 w-full bg-tertiary text-blanc font-semibold rounded-md hover:bg-secondary2 flex items-center justify-center"
           >
             Registrarse
           </a>
           <a
-            href="/src/pages/infoApp.html"
-            class="h-9 w-full bg-blue-500 text-white font-semibold rounded-md hover:bg-blue-600 flex items-center justify-center"
+            href="/src/pages/paginaRedireccions.html"
+            class="h-9 w-full bg-tertiary text-blanc font-semibold rounded-md hover:bg-secondary2 flex items-center justify-center"
           >
             Iniciar Sesió
           </a>
@@ -70,13 +70,13 @@
         <div class="flex flex-col items-center space-y-3 mt-6">
           <a
             href="https://www.google.com/webhp?hl=es&sa=X&ved=0ahUKEwiMguy70qKJAxVR0AIHHZ_xASQQPAgI&safe=active&ssui=on"
-            class="h-9 w-full bg-blue-500 text-white font-semibold rounded-full hover:bg-blue-600 flex items-center justify-center"
+            class="h-9 w-full bg-tertiary text-blanc font-semibold rounded-full hover:bg-secondary2 flex items-center justify-center"
           >
             Iniciar con Google
           </a>
           <a
             href="https://github.com/login"
-            class="h-9 w-full bg-tertiary text-white font-semibold rounded-full hover:bg-gray-900 flex items-center justify-center"
+            class="h-9 w-full bg-tertiary text-blanc font-semibold rounded-full hover:bg-secondary2 flex items-center justify-center"
           >
             Iniciar con GitHub
           </a>
