--- a/src/pages/register.html
+++ b/src/pages/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" href="/src/css/main.css" />
     <!-- Include Font Awesome for icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
@@ -13,7 +13,7 @@
         }
     </style>
 </head>
-<body class="bg-gray-100 flex items-center justify-center h-screen">
+<body class="bg-primary flex items-center justify-center h-screen">
     <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
         <h2 class="text-center text-3xl font-bold mb-6 text-black">SIGN UP</h2>
         
@@ -56,7 +56,7 @@
             <!-- Back arrow and Register button -->
             <div class="flex items-center justify-between">
                 <!-- Back arrow icon with link to index.html -->
-                <a href="index.html" class="text-blue-600 hover:text-blue-800 transition duration-300">
+                <a href="/public/index.html" class="text-blue-600 hover:text-blue-800 transition duration-300">
                     <i class="fas fa-arrow-left"></i> <!-- Back arrow icon -->
                 </a>
                 <!-- Register button -->
