--- a/src/pages/infoEspecimen/gallipato.html
+++ b/src/pages/infoEspecimen/gallipato.html
@@ -5,11 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallipato</title>
     <link rel="stylesheet" href="/src/css/main.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+        <link rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
 </head>
 <body class="bg-gray-100">
-    <!-- Títol principal -->
+    <!-- Main title -->
     <div class="bg-tertiary text-white text-center py-4">
+        <a href="../seleccioEspecimens/anfibis.html"
+            class="absolute top-4 left-4 text-lime-200 text-2xl">
+            <i class="fas fa-arrow-left"></i>
+        </a>
         <h1 class="text-2xl font-bold">Gallipato</h1>
     </div>
 
