--- a/src/pages/seleccioEspecimens/ffmh.html
+++ b/src/pages/seleccioEspecimens/ffmh.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anfibis</title>
+    <title>Figuerons, falgueres, molses i hepàtiques</title>
     <link rel="stylesheet" href="/src/css/main.css" />
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,11 +12,11 @@
 <body class="bg-gray-100">
     <!-- Main title -->
     <div class="bg-tertiary text-white text-center py-4">
-        <a href="../animals.html"
+        <a href="../plantes.html"
             class="absolute top-4 left-4 text-lime-200 text-2xl">
             <i class="fas fa-arrow-left"></i>
         </a>
-        <h1 class="text-2xl font-bold">Anfibis</h1>
+        <h1 class="text-2xl font-bold">Figuerons, falgueres, molses i hepàtiques</h1>
     </div>
 
     <!-- Container for the cards -->
@@ -25,7 +25,7 @@
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
             <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
-                <h2 class="text-xl font-semibold mb-2">Granota punta de fletxa</h2>
+                <h2 class="text-xl font-semibold mb-2">Figuera estranguladora</h2>
                 <a href="../infoEspecimen/granotaPuntaDeFletxa.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
@@ -38,7 +38,7 @@
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
             <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
-                <h2 class="text-xl font-semibold mb-2">Gallipato</h2>
+                <h2 class="text-xl font-semibold mb-2">Capil·lera </h2>
                 <a href="../infoEspecimen/gallipato.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
@@ -51,7 +51,20 @@
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
             <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
-                <h2 class="text-xl font-semibold mb-2">Salamandra de sirena</h2>
+                <h2 class="text-xl font-semibold mb-2">Sphagnum magellanicum</h2>
+                <a href="../infoEspecimen/salamandraDeSirena.html">
+                    <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
+                        Click
+                    </button>
+                </a>
+            </div>
+        </div>
+
+        <!-- Card 4 -->
+        <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
+            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <div class="flex-1">
+                <h2 class="text-xl font-semibold mb-2">Marchantia polymorpha</h2>
                 <a href="../infoEspecimen/salamandraDeSirena.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
