--- a/src/pages/paginaRedireccions.html
+++ b/src/pages/paginaRedireccions.html
@@ -24,9 +24,9 @@
     <div class="flex-1 flex flex-col justify-center space-y-4 sm:space-y-6 px-4 mt-8">
         <!-- Buttons -->
         <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary2 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl"><a href="./infoApp.html">InfoApp</a></button>
-        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary2 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl">Consells Ecosostenibles</button>
-        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary1 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl">Fauna i Flora</button>
-        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary1 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl"><a href="./animals.html">Animals</a></button>
+        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary2 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl"><a href="./ecosostenibilitat.html">Habits ecosostenibles</a></button>
+        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary1 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl"><a href="./plantes.html">Flora</a></button>
+        <button class="w-3/4 mx-auto py-3 sm:py-4 bg-secondary1 text-lg sm:text-2xl md:text-2xl lg:text-3xl rounded-xl"><a href="./animals.html">Fauna</a></button>
     </div>
 
     <!-- Trivia Button (with some space from the base of the page) -->
