--- a/src/pages/seleccioEspecimens/aus.html
+++ b/src/pages/seleccioEspecimens/aus.html
@@ -23,9 +23,10 @@
     <div class="p-4 space-y-6">
         <!-- Card 1 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" alt="Elephant" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Falcó pelegrí</h2>
+                <a href="../infoEspecimen/falcoPelegri.html">
                 <button class="bg-blue-200 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                     Click
                 </button>
@@ -34,9 +35,10 @@
 
         <!-- Card 2 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" alt="Tiger" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Quetzal</h2>
+                <a href="../infoEspecimen/quetzal.html">
                 <button class="bg-blue-200 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                     Click
                 </button>
@@ -45,9 +47,10 @@
 
         <!-- Card 3 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" alt="Dolphin" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Trencalòs</h2>
+                <a href="../infoEspecimen/trencalos.html">
                 <button class="bg-blue-200 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                     Click
                 </button>
