--- a/src/pages/seleccioEspecimens/herbes.html
+++ b/src/pages/seleccioEspecimens/herbes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Reptils</title>
+    <title>Herbes</title>
     <link rel="stylesheet" href="/src/css/main.css" />
         <link rel="stylesheet"
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -12,12 +12,11 @@
 <body class="bg-gray-100">
     <!-- Main title -->
     <div class="bg-tertiary text-white text-center py-4">
-        <a href="../animals.html"
+        <a href="../plantes.html"
             class="absolute top-4 left-4 text-lime-200 text-2xl">
             <i class="fas fa-arrow-left"></i>
         </a>
-        
-        <h1 class="text-2xl font-bold">Reptils</h1>
+        <h1 class="text-2xl font-bold">Herbes</h1>
     </div>
 
     <!-- Container for the cards -->
@@ -26,11 +25,12 @@
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
             <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
-                <h2 class="text-xl font-semibold mb-2">Monstre de Gila</h2>
-                <a href="../infoEspecimen/monstreDeGila.html">
-                <button class="bg-blue-200 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
-                    Click
-                </button>
+                <h2 class="text-xl font-semibold mb-2">Herba fantasma</h2>
+                <a href="../infoEspecimen/granotaPuntaDeFletxa.html">
+                    <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
+                        Click
+                    </button>
+                </a>
             </div>
         </div>
 
@@ -38,11 +38,12 @@
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
             <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
-                <h2 class="text-xl font-semibold mb-2">Camaleó Pigmeo</h2>
-                <a href="../infoEspecimen/camaleoPigmeo.html">
-                <button class="bg-blue-200 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
-                    Click
-                </button>
+                <h2 class="text-xl font-semibold mb-2">Lycoris radiata</h2>
+                <a href="../infoEspecimen/gallipato.html">
+                    <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
+                        Click
+                    </button>
+                </a>
             </div>
         </div>
 
@@ -50,11 +51,12 @@
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
             <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
-                <h2 class="text-xl font-semibold mb-2">Drac de Komodo</h2>
-                <a href="../infoEspecimen/dracDeKomodo.html">
-                <button class="bg-blue-200 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
-                    Click
-                </button>
+                <h2 class="text-xl font-semibold mb-2">Flor de la passió</h2>
+                <a href="../infoEspecimen/salamandraDeSirena.html">
+                    <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
+                        Click
+                    </button>
+                </a>
             </div>
         </div>
     </div>
