--- a/src/pages/seleccioEspecimens/invertebrats.html
+++ b/src/pages/seleccioEspecimens/invertebrats.html
@@ -23,7 +23,7 @@
     <div class="p-4 space-y-6">
         <!-- Targeta 1 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="../../img/cangrejo_G.png" alt="Cranc Gegant" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="/src/assets/cangrejo_G.png" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Cranc Gegant</h2>
                 <a href="../infoEspecimen/crancGegant.html">
@@ -36,7 +36,7 @@
 
         <!-- Targeta 2 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" alt="Medusa cabellera de lleó" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Medusa cabellera de lleó</h2>
                 <a href="../infoEspecimen/medusaCabeleraDeLleo.html">
@@ -49,7 +49,7 @@
 
         <!-- Targeta 3 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" alt="Anemones de mar" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Anemones de mar</h2>
                 <a href="../infoEspecimen/anemonaDeMar.html">
