--- a/src/pages/seleccioEspecimens/peixos.html
+++ b/src/pages/seleccioEspecimens/peixos.html
@@ -24,9 +24,10 @@
     <div class="p-4 space-y-6">
         <!-- Card 1 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" alt="Elephant" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Peix pedra</h2>
+                <a href="../infoEspecimen/peixPedra.html">
                 <button class="bg-blue-200 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                     Click
                 </button>
@@ -35,9 +36,10 @@
 
         <!-- Card 2 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" alt="Tiger" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Peix lleó</h2>
+                <a href="../infoEspecimen/peixLleo.html">
                 <button class="bg-blue-200 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                     Click
                 </button>
@@ -46,9 +48,10 @@
 
         <!-- Card 3 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" alt="Dolphin" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Peix drac blau</h2>
+                <a href="../infoEspecimen/peixDracBlau.html">
                 <button class="bg-blue-200 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                     Click
                 </button>
