--- a/src/pages/infoEspecimen/anemonaDeMar.html
+++ b/src/pages/infoEspecimen/anemonaDeMar.html
@@ -23,7 +23,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/36/Anemone_1.jpg" alt="Anémona de mar" class="w-64 h-64 object-cover">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQDOidp2r9SzcuQZOvSU-pk64UBfBUQzS6Mjw&s" alt="Anémona de mar" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
