--- a/src/pages/infoEspecimen/camaleoPigmeo.html
+++ b/src/pages/infoEspecimen/camaleoPigmeo.html
@@ -23,7 +23,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1a/Rhampholeon_brevicaudatus_%28male%29.jpg" alt="Camaleó Pigmeu" class="w-64 h-64 object-cover">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/1/1d/Rhampholeon_temporalis.png" alt="Camaleó Pigmeu" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
