--- a/src/pages/infoEspecimen/crancGegant.html
+++ b/src/pages/infoEspecimen/crancGegant.html
@@ -24,7 +24,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="/src/assets/cangrejo_G.png" alt="Cranc gegant" class="w-64 h-64 object-cover">
+            <img src="https://cdn0.bioenciclopedia.com/es/posts/9/7/7/cangrejo_gigante_japones_779_orig.jpg" alt="Cranc gegant" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
