--- a/src/pages/infoEspecimen/dracDeKomodo.html
+++ b/src/pages/infoEspecimen/dracDeKomodo.html
@@ -23,7 +23,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/53/Komodo_dragon_2019.jpg" alt="Drac de Komodo" class="w-64 h-64 object-cover">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTpiYAbgMMkkdOeKeUNAi_mJyrM7nfBqnXs7g&s" alt="Drac de Komodo" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
