--- a/src/pages/infoEspecimen/falcoPelegri.html
+++ b/src/pages/infoEspecimen/falcoPelegri.html
@@ -23,7 +23,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a6/Falco_peregrinus_1.jpg" alt="Falcó Pelegrí" class="w-64 h-64 object-cover">
+            <img src="https://wastemagazine.es/fotos2/falcoperegrinusbrookei1.jpg" alt="Falcó Pelegrí" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
