--- a/src/pages/infoEspecimen/gallipato.html
+++ b/src/pages/infoEspecimen/gallipato.html
@@ -23,7 +23,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/7/79/Pleurodeles_waltl_%28I%29.jpg" alt="Gallipato" class="w-64 h-64 object-cover">
+            <img src="https://mediambient.gencat.cat/web/.content/home/ambits_dactuacio/patrimoni_natural/fauna_salvatge_autoctona/gestio-especies/amfibis/pleurodeles_waltl/ofegabous-1.png_1069589618.png" alt="Gallipato" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
