--- a/src/pages/infoEspecimen/lemurCuaAnillada.html
+++ b/src/pages/infoEspecimen/lemurCuaAnillada.html
@@ -23,7 +23,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Ring-tailed_Lemur%2C_Lemur_catta_%2822116340841%29.jpg/800px-Ring-tailed_Lemur%2C_Lemur_catta_%2822116340841%29.jpg" alt="Lèmur de Cua Anillada" class="w-64 h-64 object-cover">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/2/28/Katta_8467.jpg" alt="Lèmur de Cua Anillada" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
