--- a/src/pages/infoEspecimen/medusaCabeleraDeLleo.html
+++ b/src/pages/infoEspecimen/medusaCabeleraDeLleo.html
@@ -23,7 +23,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/56/Cyanea_capillata_1_%28cropped%29.jpg" alt="Medusa cabellera de lleó" class="w-64 h-64 object-cover">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSzicaBDdDxDNbDCyP-BydkP2BLG8byk4IJ9Q&s" alt="Medusa cabellera de lleó" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
