--- a/src/pages/infoEspecimen/monstreDeGila.html
+++ b/src/pages/infoEspecimen/monstreDeGila.html
@@ -24,7 +24,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/a/a4/Heloderma_suspectum_2.jpg" alt="Monstruo de Gila" class="w-64 h-64 object-cover">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/ab/Gila_monster2.JPG/800px-Gila_monster2.JPG" alt="Monstruo de Gila" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
