--- a/src/pages/infoEspecimen/oranguta.html
+++ b/src/pages/infoEspecimen/oranguta.html
@@ -23,7 +23,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4a/Pongo_abelii_-_Sumatran_Orangutan.jpg/800px-Pongo_abelii_-_Sumatran_Orangutan.jpg" alt="Orangutà" class="w-64 h-64 object-cover">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSbKbRouYuYgHx3Dx1SCL4FzIio9cmRT9lTeA&s" alt="Orangutà" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
