--- a/src/pages/infoEspecimen/peixDracBlau.html
+++ b/src/pages/infoEspecimen/peixDracBlau.html
@@ -23,7 +23,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/0f/Glaucus_atlanticus_%28A%29.jpg/800px-Glaucus_atlanticus_%28A%29.jpg" alt="Pez Drac Blau" class="w-64 h-64 object-cover">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTQIKJ75Bxmo8r_d2kVzzDG6rtv3eYGlBggHg&s" alt="Pez Drac Blau" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
