--- a/src/pages/infoEspecimen/peixLleo.html
+++ b/src/pages/infoEspecimen/peixLleo.html
@@ -23,7 +23,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/48/Pterois_volitans.jpg/800px-Pterois_volitans.jpg" alt="Pez Lleó" class="w-64 h-64 object-cover">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRIBQy_O5n53XEMF-wV2T0XFPxYi3Ddby2nZg&s" alt="Pez Lleó" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
