--- a/src/pages/infoEspecimen/peixPedra.html
+++ b/src/pages/infoEspecimen/peixPedra.html
@@ -23,7 +23,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/63/Synanceia_travancoria.jpg/800px-Synanceia_travancoria.jpg" alt="Pez Pedra" class="w-64 h-64 object-cover">
+            <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcR5XqFMJhCnQI1EPQJpTazwYMagk_Bcn1Yhisem8LI0sCgOOOt5" alt="Pez Pedra" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
