--- a/src/pages/infoEspecimen/quetzal.html
+++ b/src/pages/infoEspecimen/quetzal.html
@@ -23,7 +23,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3e/Pharomachrus_mocinno_%28male%29.jpg/800px-Pharomachrus_mocinno_%28male%29.jpg" alt="Quetzal" class="w-64 h-64 object-cover">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Quetzal01.jpg/375px-Quetzal01.jpg" alt="Quetzal" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
