--- a/src/pages/infoEspecimen/salamandraDeSirena.html
+++ b/src/pages/infoEspecimen/salamandraDeSirena.html
@@ -23,7 +23,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/Cryptobranchus_alleganiensis_alleganiensis.jpg" alt="Salamandra de Sirena" class="w-64 h-64 object-cover">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzwjjQE82BHUJ_9yk401TjvBHLdbjx3PwmPg&s" alt="Salamandra de Sirena" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
