--- a/src/pages/infoEspecimen/trencalos.html
+++ b/src/pages/infoEspecimen/trencalos.html
@@ -23,7 +23,7 @@
 
         <!-- Imatge de l'animal -->
         <div class="flex justify-center mt-4">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7b/Gypaetus_barbatus_1_%28cropped%29.jpg/800px-Gypaetus_barbatus_1_%28cropped%29.jpg" alt="Quebrantahuesos" class="w-64 h-64 object-cover">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Bartgeier_Gypaetus_barbatus_front_Richard_Bartz.jpg/375px-Bartgeier_Gypaetus_barbatus_front_Richard_Bartz.jpg" alt="Quebrantahuesos" class="w-64 h-64 object-cover">
         </div>
 
         <!-- Descripció general -->
