--- a/src/pages/seleccioEspecimens/anfibis.html
+++ b/src/pages/seleccioEspecimens/anfibis.html
@@ -23,7 +23,7 @@
     <div class="p-4 space-y-6">
         <!-- Card 1 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/6e/Schrecklicherpfeilgiftfrosch-01.jpg/360px-Schrecklicherpfeilgiftfrosch-01.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Granota punta de fletxa</h2>
                 <a href="../infoEspecimen/granotaPuntaDeFletxa.html">
@@ -36,7 +36,7 @@
 
         <!-- Card 2 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://mediambient.gencat.cat/web/.content/home/ambits_dactuacio/patrimoni_natural/fauna_salvatge_autoctona/gestio-especies/amfibis/pleurodeles_waltl/ofegabous-1.png_1069589618.png" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Gallipato</h2>
                 <a href="../infoEspecimen/gallipato.html">
@@ -49,7 +49,7 @@
 
         <!-- Card 3 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzwjjQE82BHUJ_9yk401TjvBHLdbjx3PwmPg&s" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Salamandra de sirena</h2>
                 <a href="../infoEspecimen/salamandraDeSirena.html">
