--- a/src/pages/seleccioEspecimens/aus.html
+++ b/src/pages/seleccioEspecimens/aus.html
@@ -23,7 +23,7 @@
     <div class="p-4 space-y-6">
         <!-- Card 1 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://wastemagazine.es/fotos2/falcoperegrinusbrookei1.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Falcó pelegrí</h2>
                 <a href="../infoEspecimen/falcoPelegri.html">
@@ -35,7 +35,7 @@
 
         <!-- Card 2 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/70/Quetzal01.jpg/375px-Quetzal01.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Quetzal</h2>
                 <a href="../infoEspecimen/quetzal.html">
@@ -49,7 +49,7 @@
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
             <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
-                <h2 class="text-xl font-semibold mb-2">Trencalòs</h2>
+                <h2 class="https://upload.wikimedia.org/wikipedia/commons/thumb/2/23/Bartgeier_Gypaetus_barbatus_front_Richard_Bartz.jpg/375px-Bartgeier_Gypaetus_barbatus_front_Richard_Bartz.jpg">Trencalòs</h2>
                 <a href="../infoEspecimen/trencalos.html">
                 <button class="bg-blue-200 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                     Click
