--- a/src/pages/seleccioEspecimens/pInsectivores.html
+++ b/src/pages/seleccioEspecimens/pInsectivores.html
@@ -23,10 +23,10 @@
     <div class="p-4 space-y-6">
         <!-- Card 1 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7a/DroseraRegia.jpg/375px-DroseraRegia.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Drosera regia</h2>
-                <a href="../infoEspecimen/granotaPuntaDeFletxa.html">
+                <a href="../infoEspecimen/droseraRegia.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
                     </button>
@@ -36,10 +36,10 @@
 
         <!-- Card 2 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ea/H_chimantensis2.jpg/375px-H_chimantensis2.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Heliamphora</h2>
-                <a href="../infoEspecimen/gallipato.html">
+                <a href="../infoEspecimen/heliamphora.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
                     </button>
@@ -49,10 +49,10 @@
 
         <!-- Card 3 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/9/91/Attlwr.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Nepenthes attenboroughii</h2>
-                <a href="../infoEspecimen/salamandraDeSirena.html">
+                <a href="../infoEspecimen/nepenthes.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
                     </button>
