--- a/src/pages/seleccioEspecimens/pTrepadores.html
+++ b/src/pages/seleccioEspecimens/pTrepadores.html
@@ -23,10 +23,10 @@
     <div class="p-4 space-y-6">
         <!-- Card 1 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/2/20/Jade_vine_100_5025.JPG/375px-Jade_vine_100_5025.JPG" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Jade enfiladissa</h2>
-                <a href="../infoEspecimen/granotaPuntaDeFletxa.html">
+                <a href="../infoEspecimen/jadeEnfil.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
                     </button>
@@ -36,10 +36,10 @@
 
         <!-- Card 2 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://m.media-amazon.com/images/I/71PPcEEMC5L._AC_UF894,1000_QL80_.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Flor ratpenat</h2>
-                <a href="../infoEspecimen/gallipato.html">
+                <a href="../infoEspecimen/florRatpenat.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
                     </button>
@@ -49,10 +49,10 @@
 
         <!-- Card 3 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/Aristolochia_gigantea10-2.jpg/375px-Aristolochia_gigantea10-2.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
-                <h2 class="text-xl font-semibold mb-2">Vinya de jade</h2>
-                <a href="../infoEspecimen/salamandraDeSirena.html">
+                <h2 class="text-xl font-semibold mb-2">Aristolochia gigantea</h2>
+                <a href="../infoEspecimen/florPipa.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
                     </button>
