--- a/src/pages/paginaRedireccions.html
+++ b/src/pages/paginaRedireccions.html
@@ -31,7 +31,7 @@
 
     <!-- Trivia Button (with some space from the base of the page) -->
     <div class="px-4 mb-4 sm:mb-6">
-        <button class="w-full py-4 sm:py-5 bg-yellow-200 text-xl sm:text-5xl md:text-3xl lg:text-4xl font-bold rounded-xl">Trivia</button>
+        <button class="w-full py-4 sm:py-5 bg-yellow-200 text-xl sm:text-5xl md:text-3xl lg:text-4xl font-bold rounded-xl"><a href="./trivia.html">Trivia</a></button>
     </div>
 </body>
 
