--- a/src/pages/seleccioEspecimens/arbres.html
+++ b/src/pages/seleccioEspecimens/arbres.html
@@ -23,10 +23,10 @@
     <div class="p-4 space-y-6">
         <!-- Card 1 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/81/Adansonia_grandidieri_02.jpg/675px-Adansonia_grandidieri_02.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Baobab</h2>
-                <a href="../infoEspecimen/granotaPuntaDeFletxa.html">
+                <a href="../infoEspecimen/baobab.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
                     </button>
@@ -36,10 +36,10 @@
 
         <!-- Card 2 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Drago_milenario%2C_Icod_de_los_Vinos%2C_Tenerife%2C_Espa%C3%B1a%2C_2012-12-13%2C_DD_01.jpg/360px-Drago_milenario%2C_Icod_de_los_Vinos%2C_Tenerife%2C_Espa%C3%B1a%2C_2012-12-13%2C_DD_01.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Drago mil·lenari</h2>
-                <a href="../infoEspecimen/gallipato.html">
+                <a href="../infoEspecimen/dMilenari.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
                     </button>
@@ -49,10 +49,10 @@
 
         <!-- Card 3 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3f/Brachychiton_populneus_tree.jpg/415px-Brachychiton_populneus_tree.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Arbre ampolla</h2>
-                <a href="../infoEspecimen/salamandraDeSirena.html">
+                <a href="../infoEspecimen/aAmpolla.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
                     </button>
