--- a/src/pages/seleccioEspecimens/arbustos.html
+++ b/src/pages/seleccioEspecimens/arbustos.html
@@ -23,10 +23,10 @@
     <div class="p-4 space-y-6">
         <!-- Card 1 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c0/Titan-arum1web.jpg/375px-Titan-arum1web.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Flor cadàver</h2>
-                <a href="../infoEspecimen/granotaPuntaDeFletxa.html">
+                <a href="../infoEspecimen/fCadaber.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
                     </button>
@@ -36,10 +36,10 @@
 
         <!-- Card 2 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Hippophae_rhamnoides-01_%28xndr%29.JPG/356px-Hippophae_rhamnoides-01_%28xndr%29.JPG" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Arç groc de Sibèria</h2>
-                <a href="../infoEspecimen/gallipato.html">
+                <a href="../infoEspecimen/arçSiberia.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
                     </button>
@@ -49,10 +49,10 @@
 
         <!-- Card 3 -->
         <div class="bg-green-100 p-4 flex items-center rounded-lg shadow-lg">
-            <img src="https://via.placeholder.com/100" class="w-24 h-24 object-cover rounded-lg mr-4">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/78/Protea_cynaroides_5.jpg/375px-Protea_cynaroides_5.jpg" class="w-24 h-24 object-cover rounded-lg mr-4">
             <div class="flex-1">
                 <h2 class="text-xl font-semibold mb-2">Protea Rei</h2>
-                <a href="../infoEspecimen/salamandraDeSirena.html">
+                <a href="../infoEspecimen/proteaRei.html">
                     <button class="bg-secondary2 hover:bg-blue-300 text-blue-700 font-bold py-2 px-4 rounded-full">
                         Click
                     </button>
